--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -7,7 +7,7 @@
             <div class="card-body p-5 text-center">
   
               <div class="mb-md-5 mt-md-4 pb-5">
-  
+  dfafsdfdsfsdafsdsdd
                 <h2 class="fw-bold mb-2 text-uppercase">Add User</h2>
                 <p class="text-white-50 mb-5">Please enter your Name, Password and Email</p>
                 <form action="/insert" method="post">
@@ -23,7 +23,7 @@
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Add User</button>
                  </div>
                  </form>
-                
+                dfdsfffdfsd
             </div>
           </div>
         </div>
